# retentioneering-tools

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
examples/: quickstart.py
retentioneering/: __init__.py  constants.py  eventstream.py  sample_data.py  utils.py
retentioneering/analysis/: __init__.py  clustering.py  cohort.py  funnel.py  retention.py  step_matrix.py  transition_graph.py
retentioneering/preprocessing/: __init__.py  data_processor.py
retentioneering/visualization/: __init__.py  plots.py
tests/: test_eventstream.py
